[gd_scene load_steps=5 format=3 uid="uid://cpcq0qqvth4di"]

[ext_resource type="Script" path="res://scenes/skills/main_weapons/g-72r_carabine/g_72r_carabine.gd" id="1_n7bnm"]
[ext_resource type="PackedScene" uid="uid://c74tybx3gteic" path="res://scenes/skills/main_weapons/g-72r_carabine/g_72r_bullet.tscn" id="2_cko5k"]
[ext_resource type="Texture2D" uid="uid://dmg2xahwh84o7" path="res://assets/Monochrome/Tiles/tile_0099.png" id="3_uakd3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wrpa7"]
radius = 500.0

[node name="G-72RCarabine" type="Area2D"]
position = Vector2(0, 1)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_n7bnm")
g_72r_bullet = ExtResource("2_cko5k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(5, -1)
scale = Vector2(0.875, 0.375)
texture = ExtResource("3_uakd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wrpa7")

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(12, -2)

[node name="ShootingCD" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ReloadCD" type="Timer" parent="."]

[connection signal="timeout" from="ShootingCD" to="." method="_on_shooting_cd_timeout"]
[connection signal="timeout" from="ReloadCD" to="." method="_on_reload_cd_timeout"]
